# terminal-typer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  main.py  pyproject.toml
assets/static/languages/: english_10k.json  english_1k.json  english_25k.json
config/: .gitignore  pyproject.toml
docs/: README.md
terminal_typer/: __main__.py  app.py  constants.py  history.py  metrics.py  paths.py  personal_bests.py  prompts.py  renderers.py  settings.py
terminal_typer/assets/languages/: english.json  english_5k.json
