[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-typer"
version = "0.1.0"
description = "A Textual-based terminal typing test with word-count, timed, and history modes."
authors = [
    { name = "Charlie Meyer" },
]
readme = { file = "docs/README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "rich==14.2.0",
    "textual==8.2.3",
]
keywords = ["typing", "terminal", "textual", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Textual",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
]

[project.scripts]
terminal-typer = "terminal_typer.__main__:main"

[tool.setuptools.packages.find]
include = ["terminal_typer*"]

[tool.setuptools.package-data]
terminal_typer = ["assets/languages/*.json"]
